--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   "author": "marcopolo",
   "license": "MIT",
   "devDependencies": {
+    "@types/minimist": "^1.2.1",
+    "@types/node": "^14.14.22",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@iarna/toml": "^2.2.5",
+    "minimist": "^1.2.5",
+    "rss-parser": "^3.10.0"
   }
 }
